Upgrade to Spring Boot 3.1.0, Java 17 and Kotlin 1.8.0