@@ -3,7 +3,7 @@
     <parent>
         <groupId>za.co.ioagentsmith</groupId>
         <artifactId>kalaha</artifactId>
-        <version>3.0.1</version>
+        <version>4.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>za.co.ioagentsmith</groupId>
@@ -12,9 +12,9 @@
     <artifactId>kalaha-kotlin-backend</artifactId>
 
     <properties>
-        <junit-platform.version>5.2.0</junit-platform.version>
+        <junit-platform.version>5.6.2</junit-platform.version>
         <!--<mockito-all.version>2.0.2-beta</mockito-all.version>-->
-        <kotlin.version>1.2.51</kotlin.version>
+        <kotlin.version>1.8.0</kotlin.version>
         <mockito-kotlin.version>1.5.0</mockito-kotlin.version>
     </properties>
 
@@ -95,6 +95,10 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
@@ -109,18 +113,13 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.9</source>
-                    <target>1.9</target>
-                </configuration>
-            </plugin>
-            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <includes>
                         <include>**/*Tests.java</include>
                     </includes>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -150,6 +149,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
                 <executions>
                     <execution>
                         <id>compile</id>
